<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Didaquê</string>
    <string name="apostilas">Apostilas</string>
    <string name="biblias">Bílias</string>
    <string name="biblia_pt">Almeida Recebida</string>
    <string name="biblia_es">Reina-Valera</string>
    <string name="activity_config">Configurações</string>
    <string name="action_compartilhar">Compartilhar</string>
    <string name="action_setup">Configurações</string>
    <string name="action_favorito">Favoritar</string>
    <string name="action_copiar">Copiar</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_biblia">Bíblia</string>    
    <string name="action_sobre">Sobre</string>
    <string name="action_links">Links úteis</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>
    <string name="admob_id">ca-app-pub-1180552025950359/6609312226</string>
    <string name="error_receive_ad">Erro AdMob</string>
	<string name="app_id">629041497135453</string>
	<string name="prefTituloIdiomas">Selecione seu Idioma</string>
	<string name="prefIdiomaPadrao">Português</string>
	<string name="search_hint">Pesquisar</string>
	<string name="send_to">Enviar para</string>
	
	<string name="justificativa_ar">
	    A Almeida Recebida é de domínio público, e constitui uma versão da Bíblia portuguesa, traduzida por João Ferreira de Almeida, mas que segue os manuscritos gregos do Textus Receptus, isto é, os manuscritos utilizados pelos Reformadores Protestantes, bem como pelos Valdenses, e também quase todas as Bíblias antigas (incluindo a tradução original de João Ferreira de Almeida).\n
	    Mais informações em: http://www.almeidarecebida.org/
	</string>
</resources>
