<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    	<TextView
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/biblias"
    	    android:textSize="20sp"
    	    android:background="#280000"
    	     />
    
    	<TextView
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/biblia_pt"
    	    android:layout_marginLeft="10dp"
    	    android:textSize="20sp"
    	    android:background="#400000"
    	     />
    	
	    <TextView 
	        android:id="@+id/titulo_apostilas"
	      	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/apostilas" 
			android:textSize="20sp"
            android:textStyle="bold" 
            android:textColor="#fff"
	        android:background="#909090" 
	        />
	    
</LinearLayout>
